--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
         <!-- register my broadcast receiver -->
         <receiver
-            android:name="com.chengw.autocallrecorder.TelListenerReceiver"
+            android:name=".TelListenerReceiver"
             android:enabled="true" >
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE" />
@@ -34,13 +34,24 @@
 
         <!-- register my listener service -->
         <service
-            android:name="com.chengw.autocallrecorder.TelListenerService"
+            android:name=".TelListenerService"
             android:enabled="true"
             android:exported="true" >
             <intent-filter>
                 <action android:name="com.chengw.autocallrecorder.tellistner" />
             </intent-filter>
         </service>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
+
+    <!-- add user permissions -->
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
 </manifest>
